# EasyShow

./: README.md
StudentProgram/: CMakeLists.txt
StudentProgram/cmake/: FindCURL.cmake
StudentProgram/include/: curl.h  get.h  ip.h  share.h
StudentProgram/src/: get_number_of_classroom.c  ip.c  main.c
databaseHandelingPrograms/build-class_update-Desktop-Default/: CMakeCache.txt  Makefile  classes_handle  classes_handle.cbp  cmake_install.cmake
databaseHandelingPrograms/build-listen-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  listen  listen.cbp
databaseHandelingPrograms/build-log_in-Desktop-Default/: CMakeCache.txt  Log_in  Log_in.cbp  Makefile  cmake_install.cmake
databaseHandelingPrograms/build-roomip-Desktop-Default/: CMakeCache.txt  Makefile  Roomip  Roomip.cbp  cmake_install.cmake
databaseHandelingPrograms/build-sign_un-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  sign_in  sign_in.cbp
databaseHandelingPrograms/class_update/: CMakeLists.txt  main.c
databaseHandelingPrograms/listen/: CMakeLists.txt  main.c
databaseHandelingPrograms/log_in/: CMakeLists.txt  main.c
databaseHandelingPrograms/roomip/: CMakeLists.txt  main.c
databaseHandelingPrograms/sign_un/: CMakeLists.txt  main.c
datashowProgram/: CMakeLists.txt
datashowProgram/cmake/: FindGTK3.cmake
datashowProgram/include/: curl.h  get.h  ip.h  share.h
datashowProgram/src/: curl.c  get_number_of_classroom.c  ip.c  main.c  share.c
